# spatial-algorithms

./: .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  DESIGN.md  Jamroot  README.md  codecov.yml
bench/: scaling.cpp
cmake/: spatialalgorithms.cmake
examples/: hello-spatial-algorithms.cpp
include/boost/geometry/extensions/algorithms/: closest_point.hpp
include/boost/geometry/extensions/strategies/cartesian/: closest_point.hpp
include/mapbox/geometry/algorithms/: closest_point.hpp  closest_point_impl.hpp  intersection.hpp  intersection_impl.hpp  predicates.hpp  scaling.hpp  scaling_impl.hpp
include/mapbox/geometry/algorithms/detail/: boost_adapters.hpp  instantiate_macro.hpp  predicate_dispatcher.hpp  predicate_instantiate.hpp
include/mapbox/geometry/algorithms/predicates/: disjoint.hpp  disjoint_impl.hpp  equals.hpp  intersects.hpp  intersects_impl.hpp
scripts/: setup.sh
src/: closest_point_d.cpp  closest_point_i64.cpp  disjoint_d.cpp  disjoint_i64.cpp  intersection_b_pl_d.cpp  intersection_b_pl_i64.cpp  intersection_d.cpp  intersection_g_g_d.cpp  intersection_g_g_i64.cpp  intersection_l_l_d.cpp  intersection_l_l_i64.cpp  intersection_p_p_d.cpp  intersection_p_p_i64.cpp  intersection_pl_b_d.cpp  intersection_pl_b_i64.cpp  intersection_pl_pl_d.cpp  intersection_pl_pl_i64.cpp  intersects.cpp  intersects_d.cpp  intersects_i64.cpp  scaling_d_d.cpp
test/: predicates-test.cpp  test-instantiation-macro.cpp  test-intersection.cpp  test-spatial-algorithms.cpp
test/predicates/: test-disjoint.cpp  test-intersects.cpp
test/unit/: main-test.cpp
test/unit/closest_point/: test-closest-point.cpp
test/unit/intersection/: test-intersection.cpp
test/unit/predicates/: test-disjoint.cpp  test-intersects.cpp
test/unit/scaling/: test-scaling.cpp
test/unit/util/: check_equal.hpp  output.hpp
